--- a/blackmail/fifi/index.html
+++ b/blackmail/fifi/index.html
@@ -1,6 +1,7 @@
  <!DOCTYPE html>
  <html>
      <body>
+         <h1> Le Fifi </h1>
          <img src="youngfifi.jpg" alt="Young fifi">
          <img src="planking.jpg" alt="planking">
          <img src="nose.jpg" atl="nose">
