--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <p> This website is a mess, what can I say other than I am not a front end developer, nor do I feel like getting a template at this moment... although wordpress..</p>
 
     <p> feel free to contact me at julian (at) mentasti.net </p>
-    <p> Messages from van </p>
 
     <svg height ="600" width = "960" style="border: 1px solid black">
     </svg>
@@ -87,6 +86,6 @@
 
 
     </script>
-
+    <p>Messages from Van</p>
 </center></body>
 </html>
