--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body><center>
     <h1>Hello There!</h2>
-    <p> Hi, my name is Julian, I'm a computer science student at UBC. I'm interested in computer vision, rad-hard memory, control system and data.</p>
-    <p> Currently, I'm a developer for UBC Orbit's Payload team and I am currently an intern at CloudPBX. </p>
+    <p> Hi, my name is Julian, I'm a computer science student at UBC. I'm interested in computer vision, rad-hard memory, remote sensing, control systems and data.</p>
+    <p> Currently, I'm a developer for UBC Orbit's Payload team and I am an intern at CloudPBX at the moment. </p>
     <p> This website is a mess, what can I say other than I am not a front end developer, nor do I feel like getting a template at this moment... although wordpress..</p>
 
     <p> feel free to contact me at julian (at) mentasti.net </p>
@@ -19,7 +19,7 @@
     <script>
         var canvas = d3.select('svg');
         var dataPoints = [];
-        var w = 720, h = 400, N = 30;
+        var w = 960, h = 400, N = 30;
         for(var i = 0; i<N;++i){
             dataPoints.push([Math.random()*w,Math.random()*h,Math.random()*50,getRandomColour()]);
             //data points is (int   , int   , int   , colour)
@@ -89,3 +89,4 @@
     <p>Messages from Van</p>
 </center></body>
 </html>
+
